feat: Update benchmark results in README.md

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 2216e572-99ce-4b37-bdb6-b2d8ff2e18d1\n",
-      "Started parsing the file under job_id 1c36b5f9-bc30-475f-901d-ea79f9425205\n"
+      "Started parsing the file under job_id e5e0367d-2f83-4e4d-84e5-4d5df7119516\n",
+      "Started parsing the file under job_id 0b5d66aa-bbab-454b-b256-82495d20f91f\n"
      ]
     },
     {
@@ -62,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id bed037cd-cdb1-45d1-971b-dc99094650b2\n"
+      "Started parsing the file under job_id f78ee794-ffde-4e0a-938d-987f1b22cfcb\n"
      ]
     }
    ],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,23 +184,36 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Diff megaparse unstructured: 114\n",
-      "Diff megaparse llama: 26\n",
-      "Diff megaparse llama gptcleaner: 11\n",
-      "Diff llama parse: 31\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(f\"Diff megaparse unstructured: {diff_megaparse_unstructured}\")\n",
-    "print(f\"Diff megaparse llama: {diff_megaparse_llama}\")\n",
-    "print(f\"Diff megaparse llama gptcleaner: {diff_megaparse_llama_gptcleaner}\")\n",
-    "print(f\"Diff llama parse: {diff_llamaparse}\")\n"
+    "diff_results = {\n",
+    "    \"**Megaparse**\": diff_megaparse_unstructured,\n",
+    "    \"Megaparse with LLamaParse\": diff_megaparse_llama,\n",
+    "    \"Megaparse with LLamaParse and GPTCleaner\": diff_megaparse_llama_gptcleaner,\n",
+    "    \"LLama Parse\": diff_llamaparse\n",
+    "}\n",
+    "\n",
+    "# Sort the results\n",
+    "sorted_diff_results = sorted(diff_results.items(), key=lambda x: x[1])\n",
+    "\n",
+    "# Generate a table with the results\n",
+    "benchmark_results = \"| Parser | Diff |\\n|---|---|\\n\"\n",
+    "for parser, diff in sorted_diff_results:\n",
+    "    benchmark_results += f\"| {parser} | {diff} |\\n\"\n",
+    "\n",
+    "# Update README.md file\n",
+    "with open(\"../README.md\", \"r\") as readme_file:\n",
+    "    readme_content = readme_file.read()\n",
+    "\n",
+    "start_marker = \"<!---BENCHMARK-->\"\n",
+    "end_marker = \"<!---END_BENCHMARK-->\"\n",
+    "start_index = readme_content.find(start_marker) + len(start_marker)\n",
+    "end_index = readme_content.find(end_marker)\n",
+    "\n",
+    "updated_readme_content = readme_content[:start_index] + \"\\n\" + benchmark_results + readme_content[end_index:]\n",
+    "\n",
+    "with open(\"../README.md\", \"w\") as readme_file:\n",
+    "    readme_file.write(updated_readme_content)"
    ]
   }
  ],
