Add image extraction to PDF. Polish code

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "megaparse = MegaParse(file_path=file_path)\n",
+    "megaparse = MegaParse(file_path=file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at microsoft/table-transformer-structure-recognition were not used when initializing TableTransformerForObjectDetection: ['model.backbone.conv_encoder.model.layer2.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer3.0.downsample.1.num_batches_tracked', 'model.backbone.conv_encoder.model.layer4.0.downsample.1.num_batches_tracked']\n",
+      "- This IS expected if you are initializing TableTransformerForObjectDetection from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing TableTransformerForObjectDetection from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
     "content = megaparse.convert()\n",
-    "megaparse.save_md(md_content=content, file_path=\"./content.md\")"
+    "megaparse.save_md(md_content=content, file_path=\"./content.md\")\n",
+    "megaparse.save_images(images_dir=\"output_images\", file_path=file_path)"
    ]
   },
   {
@@ -48,45 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def extract_images_from_pdf(pdf_file_path, output_dir):\n",
-    "#     iw = ImageWriter(output_dir)\n",
-    "#     image_count = 0\n",
-    "\n",
-    "#     for page_num, page_layout in enumerate(extract_pages(pdf_file_path)):\n",
-    "#         for image in get_images_from_page(page_layout):\n",
-    "#             image_name = f\"image_{image_count}_page_{page_num}.png\"\n",
-    "#             iw.export_image(image)\n",
-    "#             image_count += 1\n",
-    "\n",
-    "\n",
-    "# def get_images_from_page(page_layout):\n",
-    "#     if isinstance(page_layout, pdfminer.layout.LTImage):\n",
-    "#         return [page_layout]\n",
-    "#     if isinstance(page_layout, pdfminer.layout.LTContainer):\n",
-    "#         img_list = []\n",
-    "#         for child in page_layout:\n",
-    "#             img_list += get_images_from_page(child)\n",
-    "#         return img_list\n",
-    "#     else:\n",
-    "#         return []"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract_images_from_pdf(pdf_file_path=file_path, output_dir=\"output/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,21 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_images_from_pdf(pdf_file_path=file_path, output_dir=\"output/\")"
    ]
