add: lmm_megaparse to MegaParse

--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -141,19 +141,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import difflib\n",
-    "\n",
     "def read_file(file_path):\n",
     "    with open(file_path, 'r', encoding='utf-8') as file:\n",
     "        return file.readlines()\n",
     "\n",
-    "def compare_files(source_path, target_path):\n",
+    "def compare_files(source_path, target_path, with_formatting=False):\n",
     "    source_lines = read_file(source_path)\n",
     "    target_lines = read_file(target_path)\n",
+    "    if not with_formatting:\n",
+    "        source_lines = [line.replace(\"*\",\"\") for line in source_lines]\n",
+    "        target_lines = [line.replace(\"*\",\"\") for line in target_lines]\n",
     "\n",
     "    diff = difflib.unified_diff(\n",
     "    source_lines,\n",
@@ -177,12 +179,13 @@
     "diff_megaparse_llama_gptcleaner = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llama_parse_megaparse_gptcleaner.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
     "diff_megaparse_llama = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llama_parse_megaparse.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
     "diff_llamaparse = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llama.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
-    "diff_unstructured = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_unstructured.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")"
+    "diff_unstructured = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_unstructured.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
+    "diff_megaparse_llm = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llm_megaparse.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,6 +193,7 @@
     "    \"**Megaparse**\": diff_megaparse_unstructured,\n",
     "    \"Megaparse with LLamaParse\": diff_megaparse_llama,\n",
     "    \"Megaparse with LLamaParse and GPTCleaner\": diff_megaparse_llama_gptcleaner,\n",
+    "    \"LMM megaparse\": diff_megaparse_llm,\n",
     "    \"LLama Parse\": diff_llamaparse\n",
     "}\n",
     "\n",
