Add Claude 3.5 (via Langchain's ChatAnthropic)

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,28 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from megaparse.Converter import MegaParse\n",
-    "from IPython.display import display_markdown\n",
-    "import pdfminer\n",
-    "from pdfminer.image import ImageWriter\n",
-    "from pdfminer.high_level import extract_pages\n",
-    "\n",
-    "import fitz\n",
-    "import io\n",
-    "from PIL import Image"
+    "from megaparse.Converter import MegaParse, MegaParseVision\n",
+    "from IPython.display import display_markdown"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "file_path = \"megaparse/tests/input_tests/MegaFake_report.pdf\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'MegaParseVision' object has no attribute 'convert'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m megaparse \u001b[38;5;241m=\u001b[39m MegaParseVision()\n\u001b[0;32m----> 3\u001b[0m content \u001b[38;5;241m=\u001b[39m \u001b[43mmegaparse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconvert\u001b[49m()\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'MegaParseVision' object has no attribute 'convert'"
+     ]
+    }
+   ],
+   "source": [
+    "megaparse = MegaParseVision()\n",
+    "\n",
+    "content = megaparse.convert()"
    ]
   },
   {
@@ -45,94 +61,6 @@
    "source": [
     "display_markdown(content, raw=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def extract_images_from_pdf(pdf_file_path, output_dir):\n",
-    "#     iw = ImageWriter(output_dir)\n",
-    "#     image_count = 0\n",
-    "\n",
-    "#     for page_num, page_layout in enumerate(extract_pages(pdf_file_path)):\n",
-    "#         for image in get_images_from_page(page_layout):\n",
-    "#             image_name = f\"image_{image_count}_page_{page_num}.png\"\n",
-    "#             iw.export_image(image)\n",
-    "#             image_count += 1\n",
-    "\n",
-    "\n",
-    "# def get_images_from_page(page_layout):\n",
-    "#     if isinstance(page_layout, pdfminer.layout.LTImage):\n",
-    "#         return [page_layout]\n",
-    "#     if isinstance(page_layout, pdfminer.layout.LTContainer):\n",
-    "#         img_list = []\n",
-    "#         for child in page_layout:\n",
-    "#             img_list += get_images_from_page(child)\n",
-    "#         return img_list\n",
-    "#     else:\n",
-    "#         return []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# extract_images_from_pdf(pdf_file_path=file_path, output_dir=\"output/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def extract_images_from_pdf(pdf_file_path: str, output_dir: str):\n",
-    "    pdf_file = fitz.open(pdf_file_path)\n",
-    "    for page_number in range(1, len(pdf_file)):\n",
-    "        page = pdf_file[page_number]\n",
-    "        for image_index, img in enumerate(page.get_images(), start=1):\n",
-    "            xref = img[0]\n",
-    "            base_image = pdf_file.extract_image(xref)\n",
-    "            image_bytes = base_image[\"image\"]\n",
-    "            image_ext = base_image[\"ext\"]\n",
-    "            pil_image = Image.open(io.BytesIO(image_bytes))\n",
-    "            image_path = (\n",
-    "                f\"{output_dir}image_{image_index}_page_{page_number}.{image_ext}\"\n",
-    "            )\n",
-    "            pil_image.save(image_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "extract_images_from_pdf(pdf_file_path=file_path, output_dir=\"output/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
