--- a/notebooks/evaluate.ipynb
+++ b/notebooks/evaluate.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,12 +180,13 @@
     "diff_megaparse_llama = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llama_parse_megaparse.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
     "diff_llamaparse = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llama.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
     "diff_unstructured = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_unstructured.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
-    "diff_megaparse_llm = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llm_megaparse.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")"
+    "diff_megaparse_llm = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_llm_megaparse.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
+    "diff_megaparse_unstructured_augmented = compare_files(\"../megaparse/tests/output_tests/MegaFake_report_unstructured_augmented.md\", \"../megaparse/tests/output_tests/MegaFake_report.md\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +195,8 @@
     "    \"Megaparse with LLamaParse\": diff_megaparse_llama,\n",
     "    \"Megaparse with LLamaParse and GPTCleaner\": diff_megaparse_llama_gptcleaner,\n",
     "    \"LMM megaparse\": diff_megaparse_llm,\n",
-    "    \"LLama Parse\": diff_llamaparse\n",
+    "    \"LLama Parse\": diff_llamaparse,\n",
+    "    \"Unstructured Augmented Parse\": diff_megaparse_unstructured_augmented,\n",
     "}\n",
     "\n",
     "# Sort the results\n",
@@ -218,6 +220,310 @@
     "\n",
     "with open(\"../README.md\", \"w\") as readme_file:\n",
     "    readme_file.write(updated_readme_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- target.md\n",
+      "+++ generated.md\n",
+      "@@ -1,18 +1,19 @@\n",
+      "-| My Mega fake | report | #1756394 31/05/2024 |\n",
+      "\n",
+      "-|--------------|--------|---------------------|\n",
+      "\n",
+      "-|              |        |                     |\n",
+      "\n",
+      "+| My Mega fake report | #1756394 | 31/05/2024 |\n",
+      "\n",
+      "+|---------------------|----------|------------|\n",
+      "\n",
+      " \n",
+      "\n",
+      " # Why Mega Parse might be the best ?\n",
+      "\n",
+      " \n",
+      "\n",
+      "-# Introduction\n",
+      "\n",
+      "+## Introduction\n",
+      "\n",
+      " \n",
+      "\n",
+      " Mega Parse is a state-of-the-art document parser designed to convert various document formats such as PDF, DOCX, PPTX, and more into Markdown (MD) format, making them ready for Retrieval-Augmented Generation (RAG) ingestion. In today's data-driven world, the ability to efficiently manage and utilize large volumes of information is crucial. This report explores the features, benefits, and comparative performance of Mega Parse, illustrating why it stands out as a superior tool in the realm of document parsing.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-# Features of Mega Parse\n",
+      "\n",
+      "+## Features of Mega Parse\n",
+      "\n",
+      " \n",
+      "\n",
+      " Mega Parse boasts an impressive array of features tailored to meet the diverse needs of modern enterprises.\n",
+      "\n",
+      " \n",
+      "\n",
+      " Multiple Format Support: Mega Parse supports a wide range of document formats including PDF, DOCX, and PPTX. This versatility allows users to handle various document types without needing multiple tools. Whether you are working with text documents, presentations, or scanned PDFs, Mega Parse has you covered.\n",
+      "\n",
+      "+\n",
+      "\n",
+      "+High-Speed Processing: One of the standout features of Mega Parse is its ability to convert documents at a rapid pace. With processing speeds of up to 120 pages per minute, it significantly enhances productivity by reducing the time spent on document conversion.\n",
+      "\n",
+      " \n",
+      "\n",
+      " Markdown Output: Mega Parse converts documents into a structured Markdown format. Markdown is a lightweight markup language with plain text formatting syntax, which is widely used because of its simplicity and ease of conversion to other formats. This makes it ideal for RAG ingestion, where structured and easily interpretable data is paramount.\n",
+      "\n",
+      " \n",
+      "\n",
+      "@@ -24,7 +25,7 @@\n",
+      " \n",
+      "\n",
+      " Error Handling: Advanced error handling capabilities ensure that any issues encountered during the conversion process are managed effectively, minimizing disruptions and maintaining workflow efficiency.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-# Benefits of Mega Parse\n",
+      "\n",
+      "+## Benefits of Mega Parse\n",
+      "\n",
+      " \n",
+      "\n",
+      " The implementation of Mega Parse offers numerous benefits that can transform the way organizations manage their documents.\n",
+      "\n",
+      " \n",
+      "\n",
+      "@@ -32,9 +33,7 @@\n",
+      " \n",
+      "\n",
+      " Versatility: Mega Parse's ability to handle multiple document types makes it a versatile tool for various industries. Whether you need to convert legal documents, technical manuals, or business presentations, Mega Parse is equipped to handle the task.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-Enhanced Knowledge Management: Converting documents to Markdown facilitates easier content management and retrieval. Markdown files are not only lightweight but\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-also highly compatible with various knowledge management systems, making it easier to organize, search, and utilize information.\n",
+      "\n",
+      "+Enhanced Knowledge Management: Converting documents to Markdown facilitates easier content management and retrieval. Markdown files are not only lightweight but also highly compatible with various knowledge management systems, making it easier to organize, search, and utilize information.\n",
+      "\n",
+      " \n",
+      "\n",
+      " Improved Workflow: Mega Parse simplifies the process of preparing documents for machine learning and AI applications. By converting documents into a structured format, it reduces the time and effort required to preprocess data, allowing teams to focus on higher-level tasks.\n",
+      "\n",
+      " \n",
+      "\n",
+      "@@ -42,57 +41,45 @@\n",
+      " \n",
+      "\n",
+      " Scalability: Mega Parse is designed to scale with the needs of an organization. As document volumes grow, Mega Parse can handle the increased load without compromising performance, making it a future-proof solution for document management.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-# Comparative Performance\n",
+      "\n",
+      "+## Comparative Performance\n",
+      "\n",
+      " \n",
+      "\n",
+      " The following table provides a comprehensive comparative analysis of Mega Parse against other document parsers based on fictional performance metrics. This comparison highlights the strengths of Mega Parse in various key areas.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-| Metric                        | Mega Parse           | Parser A   | Parser B   | Parser C   | Parser D          |\n",
+      "\n",
+      "-|-------------------------------|----------------------|------------|------------|------------|-------------------|\n",
+      "\n",
+      "-| Supported Formats             | PDF, DOCX, PPTX      | PDF, DOCX  | DOCX, PPTX | PDF, PPTX  | PDF, DOCX, XLSX   |\n",
+      "\n",
+      "-| Conversion Speed (pages/min)  | 120                  | 90         | 100        | 85         | 95                |\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-| Metric                               | Mega Parse | Parser A | Parser B | Parser C | Parser D   | Plain Text  |\n",
+      "\n",
+      "-|--------------------------------------|------------|----------|----------|----------|------------|-------------|\n",
+      "\n",
+      "-| Accuracy Rate (%)                    | 98         | 95       | 93       | 90       | 92         | 90          |\n",
+      "\n",
+      "-| Output Format                        | Markdown   | HTML     | Markdown | HTML     | Plain Text | Plain Text  |\n",
+      "\n",
+      "-| Error Rate (%)                       | 1          | 3        | 4        | 5        | 3          | 5           |\n",
+      "\n",
+      "-| Ease of Use                          | High       | Medium   | High     | Medium   | Medium     | Medium      |\n",
+      "\n",
+      "-| Integration Capability               | Excellent  | Good     | Good     | Fair     | Good       | Good        |\n",
+      "\n",
+      "-| Batch Processing                     | Yes        | No       | Yes      | No       | Yes        | No          |\n",
+      "\n",
+      "-| Custom Parsing Rules                 | Yes        | Limited  | Yes      | No       | Yes        | No          |\n",
+      "\n",
+      "-| Multilingual Support                 | Yes        | Yes      | Yes      | Yes      | Yes        | Yes         |\n",
+      "\n",
+      "-| OCR (Optical Character Recognition)  | Yes        | Yes      | Yes      | Yes      | Yes        | No          |\n",
+      "\n",
+      "-| Price (per user/month)               | $30        | $25      | $20      | $15      | $18        | $15         |\n",
+      "\n",
+      "-| Customer Support Rating (out of 5)   | 4.8        | 4.2      | 4.5      | 3.9      | 4.1        | 3.9         |\n",
+      "\n",
+      "-| Free Trial Available                 | Yes        | Yes      | No       | Yes      | No         | Yes         |\n",
+      "\n",
+      "-| Cloud Integration                    | Yes        | No       | Yes      | No       | No         | Yes         |\n",
+      "\n",
+      "-| Security Features                    | Advanced   | Basic    | Advanced | Basic    | Intermediate| Basic      |\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-| Feature                        | Tool 1              | Tool 2           | Tool 3         | Tool 4        | Tool 5           |\n",
+      "\n",
+      "-|--------------------------------|---------------------|------------------|----------------|---------------|------------------|\n",
+      "\n",
+      "-| User Community Size            | Large               | Medium           | Medium         | Small         | Medium           |\n",
+      "\n",
+      "-| Monthly Updates                | Yes                 | Yes              | No             | No            | No               |\n",
+      "\n",
+      "-| Mobile App Availability        | Yes                 | No               | Yes            | No            | No               |\n",
+      "\n",
+      "-| Platform Compatibility         | Windows, Mac, Linux | Windows, Linux   | Windows        | Mac, Linux    | Windows, Linux   |\n",
+      "\n",
+      "-| Data Privacy Compliance        | High                | Medium           | High           | Low           | Medium           |\n",
+      "\n",
+      "-| AI-Driven Enhancements         | Yes                 | No               | Yes            | No            | Yes              |\n",
+      "\n",
+      "-| File Size Limit (per document) | 1GB                 | 500MB            | 750MB          | 200MB         | 500MB            |\n",
+      "\n",
+      "-| User Training Resources        | Extensive           | Moderate         | Extensive      | Limited       | Moderate         |\n",
+      "\n",
+      "-| API Access                     | Yes                 | No               | Yes            | No            | Yes              |\n",
+      "\n",
+      "-| Customizable Output Templates  | Yes                 | Limited          | Yes            | No            | Limited          |\n",
+      "\n",
+      "-| Collaboration Features         | Yes                 | No               | Yes            | No            | Limited          |\n",
+      "\n",
+      "-| Document Version Control       | Yes                 | No               | Yes            | No            | Yes              |\n",
+      "\n",
+      "-| Import/Export Options          | Extensive           | Moderate         | Extensive      | Limited       | Moderate         |\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-\n",
+      "\n",
+      "-| Feedback Mechanism | Yes | No | Yes | No | Yes |\n",
+      "\n",
+      "-|--------------------|-----|----|-----|----|-----|\n",
+      "\n",
+      "-\n",
+      "\n",
+      "+| Metric              | Mega Parse  | Parser A       | Parser B     | Parser C     | Parser D       |\n",
+      "\n",
+      "+|---------------------|-------------|----------------|--------------|--------------|----------------|\n",
+      "\n",
+      "+| Supported Formats   | PDF, DOCX, PPTX | PDF, DOCX     | DOCX, PPTX   | PDF, PPTX    | PDF, DOCX, XLSX|\n",
+      "\n",
+      "+| Conversion Speed (pages/min) | 120 | 90             | 100          | 85           | 95             |\n",
+      "\n",
+      "+| Accuracy Rate (%)     | 98   | 95   | 93   | 90   | 92   |\n",
+      "\n",
+      "+| Output Format         | Markdown | HTML     | Markdown | Plain Text | HTML   |\n",
+      "\n",
+      "+| Error Rate (%)        | 1        | 3        | 4        | 5        | 3        |\n",
+      "\n",
+      "+| Ease of Use           | High     | Medium   | High     | Medium   | Medium   |\n",
+      "\n",
+      "+| Integration Capability| Excellent| Good     | Good     | Fair     | Good     |\n",
+      "\n",
+      "+| Batch Processing      | Yes      | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      "+| Custom Parsing Rules  | Yes      | Limited  | Yes      | No       | Limited  |\n",
+      "\n",
+      "+| Multilingual Support  | Yes      | Yes      | No       | Yes      | Yes      |\n",
+      "\n",
+      "+| OCR (Optical Character Recognition) | Yes | No | Yes | No | Yes |\n",
+      "\n",
+      "+| Price (per user/month)| $30      | $25      | $20      | $15      | $18      |\n",
+      "\n",
+      "+| Customer Support Rating (out of 5) | 4.8 | 4.2 | 4.5 | 3.9 | 4.1 |\n",
+      "\n",
+      "+| Free Trial Available  | Yes      | Yes      | No       | Yes      | No       |\n",
+      "\n",
+      "+| Cloud Integration     | Yes      | No       | Yes      | Yes      | No       |\n",
+      "\n",
+      "+| Security Features     | Advanced | Basic    | Advanced | Basic    | Intermediate |\n",
+      "\n",
+      "+| User Community Size   | Large    | Medium   | Medium   | Small    | Medium   |\n",
+      "\n",
+      "+| Monthly Updates       | Yes      | Yes      | No       | Yes      | No       |\n",
+      "\n",
+      "+| Mobile App Availability| Yes     | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      "+| Platform Compatibility| Windows, Mac, Linux | Windows, Mac | Windows | Mac, Linux | Windows, Linux |\n",
+      "\n",
+      "+| Data Privacy Compliance| High    | Medium   | High     | Low      | Medium   |\n",
+      "\n",
+      "+| AI-Driven Enhancements| Yes      | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      "+| File Size Limit (per document) | 1GB | 500MB | 750MB | 200MB | 500MB |\n",
+      "\n",
+      "+| User Training Resources| Extensive | Moderate | Extensive | Limited  | Moderate |\n",
+      "\n",
+      "+| API Access            | Yes      | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      "+| Customizable Output Templates | Yes | Limited | Yes | No | Yes |\n",
+      "\n",
+      "+| Collaboration Features| Yes      | No       | Yes      | No       | Limited  |\n",
+      "\n",
+      "+| Document Version Control| Yes    | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      "+| Import/Export Options | Extensive | Moderate | Extensive | Limited | Moderate |\n",
+      "\n",
+      "+| Feedback Mechanism    | Yes      | No       | Yes      | No       | Yes      |\n",
+      "\n",
+      " \n",
+      "\n",
+      " Note: All data presented in this table is fictional and for illustrative purposes only.\n",
+      "\n",
+      " \n",
+      "\n",
+      "-# Conclusion\n",
+      "\n",
+      "+## Conclusion\n",
+      "\n",
+      " \n",
+      "\n",
+      "-Mega Parse stands out as a leading document parser due to its extensive format support, high-speed processing, and accuracy. Its ability to convert a variety of document types into Markdown format makes it an invaluable tool for organizations looking to streamline their document management processes and enhance their knowledge management systems. With features like customizable parsing rules, batch processing, and advanced error handling, Mega Parse is well-equipped to meet the demands of modern enterprises. Its scalability and cost-effectiveness further reinforce its position as a top choice for document parsing and conversion needs. By leveraging Mega Parse, organizations can improve their workflow efficiency, reduce operational costs, and better manage their information assets in the age of big data and artificial intelligence.\n",
+      "\n",
+      "-\n",
+      "\n",
+      "+Mega Parse stands out as a leading document parser due to its extensive format support, high-speed processing, and accuracy. Its ability to convert a variety of document types into Markdown format makes it an invaluable tool for organizations looking to streamline their document management processes and enhance their knowledge management systems. With features like customizable parsing rules, batch processing, and advanced error handling, Mega Parse is well-equipped to meet the demands of modern enterprises. Its scalability and cost-effectiveness further reinforce its position as a top choice for document parsing and conversion needs. By leveraging Mega Parse, organizations can improve their workflow efficiency, reduce operational costs, and better manage their information assets in the age of big data and artificial intelligence.\n"
+     ]
+    }
+   ],
+   "source": [
+    "source_lines = read_file(\"../megaparse/tests/output_tests/MegaFake_report_unstructured_augmented.md\")\n",
+    "target_lines = read_file(\"../megaparse/tests/output_tests/MegaFake_report.md\")\n",
+    "\n",
+    "source_lines = [line.replace(\"*\",\"\") for line in source_lines]\n",
+    "target_lines = [line.replace(\"*\",\"\") for line in target_lines]\n",
+    "\n",
+    "diff = difflib.unified_diff(\n",
+    "source_lines,\n",
+    "target_lines,\n",
+    "fromfile='target.md',\n",
+    "tofile='generated.md',\n",
+    "lineterm=''\n",
+    ")\n",
+    "modifications = 0\n",
+    "for line in diff:\n",
+    "    print(line)"
    ]
   }
  ],
